Fixed an issue on hotel section with normalized margins on <p> causing a slight alignment issue.

--- a/assets/sass/components/sections/_hotel.scss
+++ b/assets/sass/components/sections/_hotel.scss
@@ -29,6 +29,7 @@
     line-height: 24px;
     color: #666666;
     font-weight: 500;
+    margin: 0;
     + p {
       margin-top: 30px;
     }
